@@ -80,6 +80,14 @@ int usage(int);
 #define NSSM_EXIT_UNCLEAN 3
 #define NSSM_NUM_EXIT_ACTIONS 4
 
+/* Process priority. */
+#define NSSM_REALTIME_PRIORITY 0
+#define NSSM_HIGH_PRIORITY 1
+#define NSSM_ABOVE_NORMAL_PRIORITY 2
+#define NSSM_NORMAL_PRIORITY 3
+#define NSSM_BELOW_NORMAL_PRIORITY 4
+#define NSSM_IDLE_PRIORITY 5
+
 /* How many milliseconds to wait before updating service status. */
 #define NSSM_SERVICE_STATUS_DEADLINE 20000
 
